# sf-cli

./: .gitignore  Cargo.toml  README.md  config.json.sf  large_test  test  test.sf  test.txt.sf  test_dir.sf
.github/: CRATES_IO_SETUP.md  copilot-instructions.md
.github/workflows/: release.yml
examples/: basic_usage.rs
scripts/: README.md  validate-workflows.sh  version.sh
src/: compression.rs  crypto.rs  file_ops.rs  hybrid_crypto.rs  lib.rs  main.rs  models.rs  progress.rs  simple_hybrid.rs  ssh_keys.rs  ssh_keys_backup.rs  tui.rs  watch.rs
tests/: hybrid_tests.rs  integration_tests.rs  watch_tests.rs
