[package]
name = "sf-cli"
version = "0.1.0"
edition = "2021"
authors = ["npv2k1"]
description = "Secure file encryption CLI/TUI tool with password protection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/npv2k1/sf-cli"

[dependencies]
# CLI and TUI
ratatui = "0.24"
crossterm = "0.27"
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Encryption and security
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = "1.7"
base64 = "0.21"
sha2 = "0.10"

# Hybrid encryption - RSA and ECDSA support
rsa = "0.9"
p256 = { version = "0.13", features = ["ecdh", "pem"] }
ssh-key = { version = "0.6", features = ["alloc", "rsa", "p256"] }
pem = "3.0"
hkdf = "0.12"

# Compression and archiving
flate2 = "1.0"
tar = "0.4"

# Progress and utilities
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"

# File system watching
notify = "6.0"

[dev-dependencies]
tempfile = "3.0"
